2024年8月29日わかんないからもう終わり

--- a/css/def.css
+++ b/css/def.css
@@ -1,8 +1,17 @@
 @charset "UTF-8";
 
+
+/* 初期設定 */
+:root{
+    --black:#1c2924;
+    --middle:#8a918f;
+    --white: #fff8fc;
+    --black-second:#008f62;
+}
 /*共通部分*/
 html{
     font-size: 100%;
+    background-color: var(--white);;
 }
 body{
     line-height: 1.7;
@@ -13,7 +22,60 @@ a{
 image{
     max-width: 100%;
 }
+.wrapper{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 4%;
+}
 /*ページ上部のナヴィゲーション*/
 .logo{
     width: 70px;
+    margin-top: 3px;
+}
+
+.yusei-magic-regular {
+    font-family: "Yusei Magic", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: var(--black);
+    font-size: 2.8rem;
+  }
+  
+
+.main-nav{
+    display: flex;
+    font-size:1.25rem;
+    text-transform: uppercase;
+    margin-top: 34px;
+    list-style: none;
+}
+.main-nav li{
+    margin-left: 36px;
+}
+.main-nav a{
+    color: var(--black);
+}
+.main-nav a:hover{
+    color: var(--black-second);
+}
+
+.page-header{
+    display: flex;
+    justify-content: space-between;
+}
+.logoo{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+/*ページ下部のフッター*/
+footer{
+    background-color: var(--middle);
+    text-align: center;
+    padding: 26px 0;
+}
+footer p{
+    color: var(--white);
+    font-size: 0.875rem;
 }
