--- a/css/def.css
+++ b/css/def.css
@@ -28,6 +28,11 @@ image{
     margin: 0 auto;
     padding: 0 4%;
 }
+footer{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 4%;
+}
 /*ページ上部のナヴィゲーション*/
 .logo{
     width: 70px;
@@ -80,4 +85,42 @@ footer{
 footer p{
     color: var(--white);
     font-size: 0.875rem;
+}
+
+
+
+/*記事ファイルのpost部分*/
+.info{
+    position: relative;
+    padding-top: 0px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+.date{
+    background: var(--black-second);
+    border-radius: 50%;
+    color: var(--white);
+    width: 80px;
+    height: 80px;
+    font-size: 1rem;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    padding-top: 10px;
+}
+.date span{
+    font-size: 1rem;
+    border-top: 1px var(--white) solid;
+    padding-top: 6px;
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+}
+.title{
+    font-size: 2rem;
+    font-weight: normal;
+}
+.title,.sub-title{
+    margin-left: 100px;
+    color: var(--black);
 }
